--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Página de Prueba</title>
+</head>
+<body>
+  <h1>Hola a todos</h1>
+  <p>Me llamo Carlos Daniel y esta es mi página prueba para Electiva 2.</p>
+</body>
+</html>
