--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Página de Prueba</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f0f2f5;
+      color: #333;
+      text-align: center;
+      padding: 50px;
+    }
+
+    h1 {
+      color: #2c3e50;
+      font-size: 3em;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 1.5em;
+      color: #555;
+    }
+
+    .card {
+      background-color: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      display: inline-block;
+      max-width: 600px;
+      margin: auto;
+    }
+  </style>
 </head>
 <body>
-  <h1>Hola a todos</h1>
-  <p>Me llamo Carlos Daniel y esta es mi página prueba para Electiva 2.</p>
+  <div class="card">
+    <h1>Hola a todos</h1>
+    <p>Me llamo Carlos Daniel y esta es mi página prueba para Electiva 2.</p>
+  </div>
 </body>
 </html>
