--- a/index.html
+++ b/index.html
@@ -5,12 +5,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Página de Prueba</title>
   <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    html, body {
+      height: 100%;
+    }
+
     body {
       font-family: Arial, sans-serif;
       background-color: #f0f2f5;
       color: #333;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    main {
+      flex-grow: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+    }
+
+    .card {
+      background-color: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      max-width: 600px;
       text-align: center;
-      padding: 50px;
     }
 
     h1 {
@@ -24,21 +52,25 @@
       color: #555;
     }
 
-    .card {
-      background-color: white;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      display: inline-block;
-      max-width: 600px;
-      margin: auto;
+    footer {
+      background-color: #2c3e50;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      font-size: 0.9em;
     }
   </style>
 </head>
 <body>
-  <div class="card">
-    <h1>Hola a todos</h1>
-    <p>Me llamo Carlos Daniel y esta es mi página prueba para Electiva 2.</p>
-  </div>
+  <main>
+    <div class="card">
+      <h1>Hola a todos</h1>
+      <p>Me llamo Carlos Daniel y esta es mi página prueba para Electiva 2.</p>
+    </div>
+  </main>
+
+  <footer>
+    © 2025 Carlos Daniel Tejada Marte – Elvys Cruz
+  </footer>
 </body>
 </html>
